<resources>
    <string name="app_name">Cinemate</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_an_account">Create an account</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="netflix_logo">Netflix Logo</string>
    <string name="news_by_email">I do not wish to receive news and promotions from Netflix by email.</string>
    <string name="log_in">Log in</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="dont_have_an_acccount">Don\'t have an acccount?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="wrong_email_or_password">Wrong email or password. Please try again.</string>
    <string name="wrong_email">Email don\'t correct.</string>
    <string name="wrong_password">The password must have 4 character min.</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="add_avatar">Add avatar</string>
    <string name="unlimited_movies_tv_shows_and_more">Unlimited movies, TV shows, and more</string>
    <string name="watch_anywhere_and_anytime">Watch anywhere and anytime.</string>
    <string name="get_started">Get Started</string>
    <string name="enjoy_on_your_tv">Enjoy on your TV</string>
    <string name="watch_on_smart_tvs_playstation_xbox_chromecast_apple_tv_blu_ray_players_and_more">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</string>
    <string name="watch_everywhere">Watch everywhere</string>
    <string name="stream_unlimited_movies_and_tv_shows_on_your_phone_tablet_laptop_and_tv">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</string>
    <string name="create_profiles_for_kids">Create profiles for kids</string>
    <string name="send_kids_on_adventures_with_their_favorite_characters_in_a_space_made_just_for_them_free">Send kids on adventures with their favorite characters in a space made just for them—free.</string>
    <string name="download_your_shows_to_watch_offline">Download your shows to watch offline</string>
    <string name="watch_on_a_plane_train_or_submarine">Watch on a plane, train, or submarine…</string>
    <string name="let_s_find_your_preferences">Let\'s find your preferences!</string>
    <string name="continue_watching">Continue watching</string>
    <string name="new_top_content_here">New top content here</string>
    <string name="recommendations_for_you">Recommendations for you</string>
    <string name="category_is_currently_empty">Category is currently empty</string>
    <string name="search">Search…</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="watch_history">Watch history</string>
    <string name="manage_account">Manage account</string>
    <string name="add_new_account">Add new account</string>
    <string name="sign_out">Sign out</string>
    <string name="release_year">Release Year:</string>
    <string name="duration">Duration:</string>
    <string name="category">Category:</string>
    <string name="your_special_notifications">Your Special Notifications</string>
    <string name="edit_your_details">Edit your details</string>
    <string name="edit">Edit</string>
</resources>