<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".EditUserActivity">

    <!-- Состояние регистрации -->
    <LinearLayout
        android:id="@+id/registrationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="70dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/netflix_logo"
                    android:src="@drawable/cinemate" />

                <!-- Текст заголовка -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_your_details"
                    android:textColor="@color/login_text_color"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:gravity="center" />


                <!-- Поля ввода -->
                <TextView
                    android:id="@+id/errorMessageLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/loginInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#99FFFFFF"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/errorMessageFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/firstNameInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#99FFFFFF"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/errorMessageSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/surnameInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#99FFFFFF"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/errorMessageEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/emailInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#AAAAAA"
                    android:textColor="#AAAAAA"
                    android:textColorHint="#99AAAAAA"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/errorMessagePhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/phoneInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#99FFFFFF"
                    android:layout_marginBottom="16dp"
                    android:autofillHints=""
                    android:inputType="text|number"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/errorMessagePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/passwordInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#99FFFFFF"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/avatarAddButton"
                    android:onClick="avatarAddButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textAllCaps="false"
                    android:text="@string/add_avatar"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button_solid"/>

                <TextView
                    android:id="@+id/errorMessageAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/error"
                    android:gravity="center"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/avatarPreviewImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />


                <!-- Кнопка входа -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButtonRegister"
                    android:onClick="onEditClicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/edit"
                    android:background="@drawable/rounded_button_solid"
                    android:textColor="@color/white"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelButtonRegister"
                    android:onClick="onCancelClicked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="Cancel"
                    android:background="@drawable/rounded_button_solid"
                    android:textColor="@color/white"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>